Refine JsonReelRepository.java